2006-04-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind - to fclear
	(other-window): choose the right window when the frame is empty
	(clear-frame): new function
	("fclear"): new command

	* core.lisp (maybe-hide-window): hide the window if new-window is nil
	(frame-raise-window): if w is nil clear the frame

2006-04-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("quit"): new command

	* stumpwm.lisp (stumpwm-internal-loop): catch a :quit tag

2006-04-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (handle-rp-commands): convert the response string using map.

	* primitives.lisp (format-expand): unknown % formatters are printed verbatim.

	* core.lisp (window-name): call xlib:wm-name
	(window-class): call xlib:get-wm-class
	(window-res-name): likewise
	(handle-rp-commands): always return the bytes-after

	* user.lisp (parse-and-run-command): print the input as part of the error.

	* stumpwm.lisp (init-atoms): just set +wm-delete-window+. use
	xlib:intern-atom.

	* primitives.lisp (remove-hook): new macro
	(dformat): ignore the args

	* core.lisp (window-name): use get-property to convert the
	property value to a string.
	(window-class): likewise
	(window-res-name): likewise
	(bytes-to-window): new function
	(handle-rp-commands): likewise
	(:property-notify): new event handler
	(handle-event): don't warn about the error.

2006-04-15  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (sync-keys): sync keys on the screen-focus-window.
	(init-screen): don't listen for :key-press events on
	focus-window. grab the keys on the focus-window.

2006-04-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind C-h to "help"

	* primitives.lisp (*message-window-gravity*): new defvar
	(*input-window-gravity*): likewise

	* input.lisp (setup-input-window): dont set the drawable-y
	(draw-input-bucket): use setup-win-gravity

	* core.lisp (setup-win-gravity): new function
	(setup-message-window): use setup-win-gravity
